fix frontend and reasoning chat page before normal chat function